--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,9 @@ version: '3.7'
 
 services:
   app:
-    # image: whatwewant/daas:v0.0.6
+    # image: whatwewant/database-as-a-service:v0.0.6
     build:
       context: .
     ports:
-      - 0.0.0.0:6666:6666
-    # command: sleep infinity
-    volumes:
-      - ./conf:/conf
+      - 0.0.0.0:8080:8080
+      
